2002-11-26  David Hyatt  <hyatt@apple.com>

	Smarter block inside inline handling.  Eliminate whitespace
	that is in between blocks inside inilnes.
	
        * khtml/xml/dom_textimpl.cpp:
        (TextImpl::attach):

2002-11-26  David Hyatt  <hyatt@apple.com>

	Don't let blocks inside inlines collapse with their surroundings
	ever.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):

2002-11-26  David Hyatt  <hyatt@apple.com>

	Fix a collapsing margin regression on aintitcool caused by
	my support of blocks inside inlines.  A block could be wrapped
	by an inline, e.g., <font><p>foo</p></font>, and in this case,
	you do not apply the collapsing margin quirk.  The margin stays.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::layoutBlockChildren):

2002-11-26  David Hyatt  <hyatt@apple.com>

	Fix the font family stuff to be refcounted, so copying
	fonts stays cheap.  Re-enabling it.

	Patch the render_arena code with some debugging info
	to help detect when memory gets trashed.

	Fix the background painting code to deal with negative
	x and y bakcground positions.  Fixes the brain on
	brainjar.com.
	
        * khtml/css/cssstyleselector.cpp:
        * khtml/rendering/render_arena.cpp:
        (RenderArena::free):
        * khtml/rendering/render_box.cpp:
        (RenderBox::paintBackground):
        * kwq/KWQFont.h:
        * kwq/KWQFont.mm:
        (QFontFamily::QFontFamily):
        (QFontFamily::operator=):

=== Alexander-34 ===

2002-11-26  David Hyatt  <hyatt@apple.com>

	Backing out support for multiple font families for now.
	The support is still there in QFont.  I've just stopped
	the style selector from walking the entire value list (it
	will only put the first family into the font).

	The original change  caused a 5% perf regression.  
	I'm going to see what kinds of tricks I can pull to get 
	some of this back before re-enabling the feature.
	
        * khtml/css/cssstyleselector.cpp:
