@@ -1,3 +1,9 @@
+2002-11-27  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3105502.  drop-downs wrapping to next line.
+	
+        * khtml/css/html4.css:
+
 2002-11-26  David Hyatt  <hyatt@apple.com>
 
 	Smarter block inside inline handling.  Eliminate whitespace
